# mquickjs-rs-demo

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Cargo.toml.bak  DEVELOPING_GUIDE.md  README.md  build.rs  mquickjs.build.toml  mquickjs.ridl.toml  ridl_symbols.rs  test.js  test_say_hello.js  test_stdlib_demo.js
doc/planning/: 2026-01-08-build-refactor.md  2026-01-08-doc-audit.md  2026-01-08-ridl-autogen-planA.md  2026-01-08-ridl-autogen-planA1-registry-manifest.md  2026-01-08-ridl-tool-stdlib-demo.md  2026-01-11-console-singleton-rtos-plan.md  2026-01-11-generator-singleton-aggregation-design.md  2026-01-11-ridl-variadic.md  2026-01-11-singleton-aggregation-optionB-runtime-writer.md  2026-01-11-stdlib-injection-hooks.md  2026-01-12-api-glue-impl-refactor-plan.md  2026-01-12-glue-conversion-layer.md  2026-01-12-singleton-name-key.md  2026-01-12-thin-vtable-migration.md  2026-01-12_fix_generated_glue_warnings.md  2026-01-12_ridl_true_class_design.md  2026-01-13_mquickjs_patch_policy.md  2026-01-13_refactor_ridl_builder_reuse_ridl_tool_register_h.md  2026-01-13_ridl_builder_multi_app_support_plan.md  2026-01-13_ridl_pipeline_consolidation.md  2026-01-13_tool_responsibility_split_B.md  2026-01-14_ridl_aggregate_file_consolidation.md  2026-01-14_ridl_builder_unit_graph.md  2026-01-14_ridl_class_plan.md  2026-01-14_ridl_module_generated_files_consolidation.md  2026-01-14_ridl_true_class_detailed_design.md  2026-01-15-按ridl文件为module维度组织生成器数据模型.md  2026-01-16_fix_codegen_naming.md  2026-01-16_js_integration_tests_reorg.md  2026-01-16_nullable_alignment.md  2026-01-16_singleton_method_typed_glue.md  2026-01-16_test_reorg_followups.md  2026-01-16_v8_style_value_context_refactor.md  2026-01-17-fn覆盖与HandleScope前置-状态快照.md  2026-01-18-mquickjs-rs-HandleScope-EscapableScope.md  2026-01-18-mquickjs-rs-env-any-array-ridl.md  2026-01-18-mquickjs-rs-handle-scope-escapable-closure-api.md  2026-01-18-ridl-module-ns-require-v1-implementation-plan.md  2026-01-18-ridl-module-ns-require-v1.md  2026-01-18-tests-global-fn-any-array-callback.md  (+11 more)
docs/: README.md  v1_spec_scope.md  v1_test_types_matrix.md  v1_test_types_optional_params.md
docs/architecture/: README.md  overview.md  plan-b-profiles-and-registry.md
docs/guides/: development.md
docs/legacy/: README.md  glue-generator-templates-and-type-conversion.md  modular-build-plan.md  plan-b-profiles-and-registry.md  rust-glue-evolution.md  stdlib-extension-mechanism.md
docs/planning/: README.md  ridl_module_extension_mechanism.md
docs/planning/2026/: 2026-01-08-build-refactor.md  2026-01-08-doc-audit.md  2026-01-08-ridl-autogen-planA.md  2026-01-08-ridl-autogen-planA1-registry-manifest.md  2026-01-08-ridl-tool-stdlib-demo.md  2026-01-11-console-singleton-rtos-plan.md  2026-01-11-generator-singleton-aggregation-design.md  2026-01-11-ridl-variadic.md  2026-01-11-singleton-aggregation-optionB-runtime-writer.md  2026-01-11-stdlib-injection-hooks.md  2026-01-12-api-glue-impl-refactor-plan.md  2026-01-12-glue-conversion-layer.md  2026-01-12-singleton-name-key.md  2026-01-12-thin-vtable-migration.md  2026-01-12_fix_generated_glue_warnings.md  2026-01-12_ridl_true_class_design.md  2026-01-13_mquickjs_patch_policy.md  2026-01-13_refactor_ridl_builder_reuse_ridl_tool_register_h.md  2026-01-13_ridl_builder_multi_app_support_plan.md  2026-01-13_ridl_pipeline_consolidation.md  2026-01-13_tool_responsibility_split_B.md  2026-01-14_ridl_aggregate_file_consolidation.md  2026-01-14_ridl_builder_unit_graph.md  2026-01-14_ridl_class_plan.md  2026-01-14_ridl_module_generated_files_consolidation.md  2026-01-14_ridl_true_class_detailed_design.md  2026-01-15-按ridl文件为module维度组织生成器数据模型.md  2026-01-16_fix_codegen_naming.md  2026-01-16_js_integration_tests_reorg.md  2026-01-16_nullable_alignment.md  2026-01-16_singleton_method_typed_glue.md  2026-01-16_test_reorg_followups.md  2026-01-16_v8_style_value_context_refactor.md  2026-01-17-fn覆盖与HandleScope前置-状态快照.md  2026-01-18-mquickjs-rs-HandleScope-EscapableScope.md  2026-01-18-mquickjs-rs-env-any-array-ridl.md  2026-01-18-ridl-module-ns-require-v1.md  (+27 more)
docs/ridl/: README.md  codegen-outputs.md  context-init.md  glue-generator-templates-and-type-conversion.md  module-design.md  overview.md  require-materialize.md  rust-glue-evolution.md  stdlib-extension-mechanism.md  syntax-and-extension.md  thin-vtable-glue-impl-split.md
mquickjs-profile/: Cargo.toml
mquickjs-profile/src/: lib.rs
ridl-builder/: Cargo.toml
ridl-builder/src/: aggregate.rs  config.rs  main.rs  module_discovery.rs  romclass_map.rs  unit_graph.rs
ridl-modules/registry/: Cargo.toml  build.rs
ridl-modules/ridl_module_demo_default/: Cargo.toml  build.rs  ridl_module_demo_default_impl.rs
ridl-modules/ridl_module_demo_default/src/: generated.rs  impls.rs  lib.rs  ridl_module_demo_default.ridl
ridl-modules/ridl_module_demo_strict/: Cargo.toml  build.rs
ridl-modules/stdlib/: Cargo.toml  build.rs  stdlib.ridl  stdlib_impl.rs
ridl-modules/stdlib_demo/: Cargo.toml  build.rs  stdlib_demo_impl.rs
ridl-modules/stdlib_demo2/: Cargo.toml  build.rs
ridl-modules/test_class/: Cargo.toml  build.rs
ridl-modules/tests/: README.md
ridl_modules/: Cargo.toml  README.md
ridl_modules/stdlib_demo/: Cargo.toml  README.md
src/: context.rs  lib.rs  main.rs  ridl_context_init.rs  test_runner.rs
tests/: README.md  TODO.md  base_build_no_ridl_headers.rs  js_smoke.rs  no_c_option.rs  ridl-modules  smoke_console_log.js  smoke_console_log_varargs.js  smoke_ridl_strict_demo.js  smoke_ridl_v1_glue.js  smoke_ridl_varargs.js  smoke_sayhello.js  smoke_sayhello2.js  smoke_test_class_basic.js  smoke_test_class_errors.js  smoke_test_class_proto.js  stdlib_demo_smoke.js
tests/_diag/: exports_diag.js
tests/ridl_tests/: Cargo.toml  README.md  stdlib_demo.ridl
xtask/src/: main.rs  probe_bindgen.rs
(+136 files in other folders)
