[workspace]
members = [
    "deps/mquickjs-sys",
    "deps/mquickjs-rs",
    "deps/ridl-tool",
    "ridl-modules/stdlib",
    "ridl-modules/ridl_module_demo_default",
    "ridl-modules/ridl_module_demo_strict",
    ".", "deps/mquickjs-build", "xtask",
]

[package]
name = "mquickjs-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "mquickjs_demo"
path = "src/lib.rs"

[[bin]]
name = "mquickjs-demo"
path = "src/main.rs"

[dependencies]
mquickjs-rs = { path = "deps/mquickjs-rs" }
mquickjs-sys = { path = "deps/mquickjs-sys" }

# RIDL modules selected for this app
stdlib = { path = "ridl-modules/stdlib" }
ridl_module_demo_default = { path = "ridl-modules/ridl_module_demo_default" }
ridl_module_demo_strict = { path = "ridl-modules/ridl_module_demo_strict" }

[features]
# Demo app defaults to having RIDL stdlib extensions enabled.
default = ["ridl-extensions"]

# App opt-in for RIDL stdlib extensions.
ridl-extensions = ["mquickjs-rs/ridl-extensions"]
