[workspace]
members = [
    "deps/mquickjs-sys",
    "deps/mquickjs-rs",
    "deps/ridl-tool",
    "deps/mquickjs-ridl-glue",
    "ridl-modules/stdlib",
    ".",
    "deps/mquickjs-build",
    "ridl-builder",

    "ridl-modules/tests/global_mode/test_types",
    "ridl-modules/tests/global_mode/test_literals",
    "ridl-modules/tests/global_mode/test_fn",
    "ridl-modules/tests/global_mode/test_js_fields",
    "ridl-modules/tests/global_mode/test_class",
    "ridl-modules/tests/global_mode/test_singleton",
    "ridl-modules/tests/global_mode/test_import_using",
    "ridl-modules/tests/global_mode/test_diagnostics",
]

# NOTE: test RIDL modules live under ridl-modules/tests/. They are workspace members but
# are not linked into the demo app by default (to avoid exposing test APIs).

[package]
name = "mquickjs-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "mquickjs_demo"
path = "src/lib.rs"

[[bin]]
name = "mquickjs-demo"
path = "src/main.rs"

[dependencies]
mquickjs-rs = { path = "deps/mquickjs-rs" }
mquickjs-sys = { path = "deps/mquickjs-sys" }

[build-dependencies]
mquickjs-ridl-glue = { path = "deps/mquickjs-ridl-glue" }

# RIDL modules selected for this app
[dependencies.stdlib]
path = "ridl-modules/stdlib"

[dependencies.ridl_test_g_types]
path = "ridl-modules/tests/global_mode/test_types"

[dependencies.ridl_test_g_literals]
path = "ridl-modules/tests/global_mode/test_literals"

[dependencies.ridl_test_g_fn]
path = "ridl-modules/tests/global_mode/test_fn"

[dependencies.ridl_test_g_js_fields]
path = "ridl-modules/tests/global_mode/test_js_fields"

[dependencies.ridl_test_g_singleton]
path = "ridl-modules/tests/global_mode/test_singleton"

[dependencies.ridl_test_g_import_using]
path = "ridl-modules/tests/global_mode/test_import_using"

[dependencies.ridl_test_g_diagnostics]
path = "ridl-modules/tests/global_mode/test_diagnostics"

[features]
# Demo app defaults to having RIDL stdlib extensions enabled.
default = ["ridl-extensions"]

# App opt-in for RIDL stdlib extensions.
ridl-extensions = ["mquickjs-rs/ridl-extensions"]
