[package]
name = "ridl_module_demo_default"
version = "0.1.0"
edition = "2024"

[dependencies]
mquickjs-rs = { path = "../../deps/mquickjs-rs", features = ["ridl-extensions"] }

[build-dependencies]
# Use the existing generator binary crate in this repo.
ridl-tool = { path = "../../deps/ridl-tool" }

[lib]
crate-type = ["rlib"]
